# 579-project

./: .gitignore  Map_Costs.txt  Map_Readme.txt  Notes, ElliotZ.docx  meeting-notes.md  professor-meeting-notes.md  readme.md
code/: .clang-format  .gitignore  CMakeLists.txt  compile.sh  pseduocode.cpp  pseduocode.cpp.  readme.md
code/data/: edge.csv  locations.csv  node.csv  paths.csv
code/src/: .clang-format  AStar.cpp  AStar.h  CMakeLists.txt  CommonUtilities.cpp  CommonUtilities.h  main.cpp  parseArgs.cpp  parseArgs.h  readme.md
code/src/db/: .clang-format  CMakeLists.txt  CatTranDatabase.cpp  CatTranDatabase.h  EdgeDatabase.cpp  EdgeDatabase.h  LocationDatabase.cpp  LocationDatabase.h  NodeDatabase.cpp  NodeDatabase.h  PathDatabase.cpp  PathDatabase.h  TrafficDatabase.cpp  TrafficDatabase.h
code/src/graph/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
code/src/lib/: CMakeLists.txt  account.cpp  account.hpp  edge.cpp  edge.hpp  node.cpp  node.hpp  readme.md  trafficCondition.cpp  trafficCondition.hpp  vehicle.cpp  vehicle.hpp
documentation/: Map_Costs.txt  Notes, ElliotZ.docx  elliot-notes.md
report/: report.md
ted/data/: cattran.csv  edge.csv  node.csv  traffic.csv
ted/data/xlsx/: traffic.xlsx
ted/document/: AIPS.docx
ted/script/: traffic.m
ted/src/: AStar.cpp  AStar.h  AStarEdge.cpp  AStarEdge.h  CommonUtilities.cpp  CommonUtilities.h  Main.cpp
ted/src/db/: CatTranDatabase.cpp  EdgeDatabase.cpp  EdgeDatabase.h  LocationDatabase.cpp  NodeDatabase.cpp  NodeDatabase.h  PathDatabase.cpp  PathDatabase.h  TrafficDatabase.cpp  TrafficDatabase.h
ted/src/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
